language/move-lang/tests/move_check/typing/pack_constraint_not_satisfied.exp
error: 

   ┌── tests/move_check/typing/pack_constraint_not_satisfied.move:3:16 ───
   │
 7 │         R {r:_ } = R { r: 0 };
   │         ^^^^^^^^ Constraint not satisfied. The copyable type 'u64' does not satisfy the constraint 'resource'
   ·
 7 │         R {r:_ } = R { r: 0 };
   │                           - The type's constraint information was declared here
   ·
 3 │     struct R<T:resource>  { r: T }
   │                -------- 'resource' constraint declared here
   │

error: 

   ┌── tests/move_check/typing/pack_constraint_not_satisfied.move:3:16 ───
   │
 7 │         R {r:_ } = R { r: 0 };
   │                    ^^^^^^^^^^ Constraint not satisfied. The copyable type 'u64' does not satisfy the constraint 'resource'
   ·
 7 │         R {r:_ } = R { r: 0 };
   │                           - The type's constraint information was declared here
   ·
 3 │     struct R<T:resource>  { r: T }
   │                -------- 'resource' constraint declared here
   │

error: 

   ┌── tests/move_check/typing/pack_constraint_not_satisfied.move:2:5 ───
   │
 8 │         S { c: Coin {} };
   │         ^^^^^^^^^^^^^^^^ Constraint not satisfied. The resource type '0000000000000000000000000000000000000000000000000000000008675309.M.Coin' does not satisfy the constraint 'copyable'
   ·
 2 │     resource struct Coin {}
   │     -------- The type's constraint information was declared here
   ·
 4 │     struct S<T:copyable> { c: T }
   │                -------- 'copyable' constraint declared here
   │

error: 

   ┌── tests/move_check/typing/pack_constraint_not_satisfied.move:2:5 ───
   │
 8 │         S { c: Coin {} };
   │         ^^^^^^^^^^^^^^^^ Cannot ignore resource values. The value must be used
   ·
 2 │     resource struct Coin {}
   │     -------- 0000000000000000000000000000000000000000000000000000000008675309.M.S<0000000000000000000000000000000000000000000000000000000008675309.M.Coin> is found to be a non-copyable type here
   │

error: 

    ┌── tests/move_check/typing/pack_constraint_not_satisfied.move:3:16 ───
    │
 12 │         R {r: R { r: _ } } = R { r: R { r: 0 }};
    │         ^^^^^^^^^^^^^^^^^^ Constraint not satisfied. The copyable type '0000000000000000000000000000000000000000000000000000000008675309.M.R<u64>' does not satisfy the constraint 'resource'
    ·
 12 │         R {r: R { r: _ } } = R { r: R { r: 0 }};
    │                                            - The type's constraint information was declared here
    ·
 3 │     struct R<T:resource>  { r: T }
    │                -------- 'resource' constraint declared here
    │

error: 

    ┌── tests/move_check/typing/pack_constraint_not_satisfied.move:3:16 ───
    │
 12 │         R {r: R { r: _ } } = R { r: R { r: 0 }};
    │               ^^^^^^^^^^ Constraint not satisfied. The copyable type 'u64' does not satisfy the constraint 'resource'
    ·
 12 │         R {r: R { r: _ } } = R { r: R { r: 0 }};
    │                                            - The type's constraint information was declared here
    ·
 3 │     struct R<T:resource>  { r: T }
    │                -------- 'resource' constraint declared here
    │

error: 

    ┌── tests/move_check/typing/pack_constraint_not_satisfied.move:3:16 ───
    │
 12 │         R {r: R { r: _ } } = R { r: R { r: 0 }};
    │                              ^^^^^^^^^^^^^^^^^^ Constraint not satisfied. The copyable type '0000000000000000000000000000000000000000000000000000000008675309.M.R<u64>' does not satisfy the constraint 'resource'
    ·
 12 │         R {r: R { r: _ } } = R { r: R { r: 0 }};
    │                                            - The type's constraint information was declared here
    ·
 3 │     struct R<T:resource>  { r: T }
    │                -------- 'resource' constraint declared here
    │

error: 

    ┌── tests/move_check/typing/pack_constraint_not_satisfied.move:3:16 ───
    │
 12 │         R {r: R { r: _ } } = R { r: R { r: 0 }};
    │                                     ^^^^^^^^^^ Constraint not satisfied. The copyable type 'u64' does not satisfy the constraint 'resource'
    ·
 12 │         R {r: R { r: _ } } = R { r: R { r: 0 }};
    │                                            - The type's constraint information was declared here
    ·
 3 │     struct R<T:resource>  { r: T }
    │                -------- 'resource' constraint declared here
    │

error: 

    ┌── tests/move_check/typing/pack_constraint_not_satisfied.move:2:5 ───
    │
 13 │         S { c: S { c: Coin {} } };
    │         ^^^^^^^^^^^^^^^^^^^^^^^^^ Constraint not satisfied. The resource type '0000000000000000000000000000000000000000000000000000000008675309.M.S<0000000000000000000000000000000000000000000000000000000008675309.M.Coin>' does not satisfy the constraint 'copyable'
    ·
 2 │     resource struct Coin {}
    │     -------- The type's constraint information was declared here
    ·
 4 │     struct S<T:copyable> { c: T }
    │                -------- 'copyable' constraint declared here
    │

error: 

    ┌── tests/move_check/typing/pack_constraint_not_satisfied.move:2:5 ───
    │
 13 │         S { c: S { c: Coin {} } };
    │         ^^^^^^^^^^^^^^^^^^^^^^^^^ Cannot ignore resource values. The value must be used
    ·
 2 │     resource struct Coin {}
    │     -------- 0000000000000000000000000000000000000000000000000000000008675309.M.S<0000000000000000000000000000000000000000000000000000000008675309.M.S<0000000000000000000000000000000000000000000000000000000008675309.M.Coin>> is found to be a non-copyable type here
    │

error: 

    ┌── tests/move_check/typing/pack_constraint_not_satisfied.move:2:5 ───
    │
 13 │         S { c: S { c: Coin {} } };
    │                ^^^^^^^^^^^^^^^^ Constraint not satisfied. The resource type '0000000000000000000000000000000000000000000000000000000008675309.M.Coin' does not satisfy the constraint 'copyable'
    ·
 2 │     resource struct Coin {}
    │     -------- The type's constraint information was declared here
    ·
 4 │     struct S<T:copyable> { c: T }
    │                -------- 'copyable' constraint declared here
    │

